--- a/css/styles.css
+++ b/css/styles.css
@@ -689,7 +689,7 @@ footer .social-icon {
   align-items: center;
 
   width: 100%;
-  height: 294px;
+  height: 100%;
   padding: 0 24px;
 
   font-size: 18px;
