--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ header {
   background-color: var(--accent-color);
 
   position: absolute;
-  bottom: -1px;
+  bottom: 0px; /*Якщо придивитись на макеті, полоса залізає на бордер. А з 0px вона над бордером */
 }
 
 .header-section .contacts {
@@ -301,7 +301,13 @@ header {
 }
 
 .advantage .icon-wrap {
-  padding: 25px 100px;
+  width: 100%;
+  height: 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   margin-bottom: 30px;
   background-color: var(--filter-button-background);
   border-radius: 4px;
@@ -409,7 +415,7 @@ header {
   align-items: center;
   width: 44px;
   height: 44px;
-  padding: 12px;
+
   border-radius: 50%;
 
   transition: var(--transition);
@@ -444,10 +450,12 @@ header {
 }
 
 .client-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
 
   border: 1px solid var(--social-icons-color);
   border-radius: 4px;
@@ -501,8 +509,6 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  padding: 6px;
 
   position: absolute;
   right: 8px;
@@ -686,7 +692,7 @@ footer .social-icon {
 
 .gallery .overlay {
   position: absolute;
-  bottom: -100%;
+  transform: translateY(0);
 
   display: flex;
   align-items: center;
@@ -696,19 +702,18 @@ footer .social-icon {
   padding: 0 24px;
 
   font-size: 18px;
-  font-weight: 400;
-  line-height: 1.5555;
+  line-height: 1.55;
 
   color: var(--main-white-color);
   background-color: rgba(33, 150, 243, 0.9);
 
   transition: var(--transition);
-  transition-property: bottom;
+  transition-property: transform;
 }
 
 .gallery .link:hover .overlay,
 .gallery .link:focus .overlay {
-  bottom: 0;
+  transform: translateY(-100%);
 }
 
 .gallery .desc-wrapper {
