--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,10 @@ header {
   bottom: 0;
 
   width: 100%;
-  padding: 27px 0;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   font-size: 14px;
   font-weight: 700;
